Hotfix: kubeshark version ansible variable
Add version comparison between the kubeshark installed version
and the user provided version, the version in yaml is represent in
float.

--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -5,9 +5,9 @@ on:
   pull_request:
     paths:
       - Vagrantfile
-      - provisioners/*
+      - provisioners/**
       - vagrant.yaml
-      - lib/*
+      - lib/**
       - .github/workflows/provision.yaml
       - requirements.d/ansible.txt
   schedule:
