--- a/provisioners/ansible/roles/kubernetes/kubeshark/handlers/main.yml
+++ b/provisioners/ansible/roles/kubernetes/kubeshark/handlers/main.yml
@@ -20,7 +20,7 @@
 - name: 'Verify installed kubeshark version'
   assert:
     that:
-      - 'kubeshark_version == kubeshark_re_version'
+      - 'kubeshark_re_version is version(kubeshark_version, "=")'
     fail_msg: 'Kubeshark installation failed, {{ kubeshark_version }} != {{ kubeshark_re_version }}'
     success_msg: 'Installed kubeshark version is: {{ kubeshark_re_version }}'
 ...
