--- a/provisioners/ansible/roles/docker/defaults/main.yml
+++ b/provisioners/ansible/roles/docker/defaults/main.yml
@@ -1,4 +1,6 @@
 ---
+docker_arch: 'amd64'
+docker_os: '{{ ansible_system | lower }}'
 docker_group: 'docker'
 docker_pkg_name: "docker-ce"
 docker_insecure_registries: []
@@ -23,4 +25,6 @@ docker_sdk_container_name: 'hello-world'
 docker_sdk_container_image: '{{ docker_sdk_container_name }}:latest'
 docker_compose_install: true
 docker_compose_version: '1.29.2'
+docker_buildx_install: true
+docker_buildx_version: '0.10.4'
 ...
