Update ansible roles
- Add ansible role to provision the kubetail command line tool

--- a/provisioners/ansible/playbook.yml
+++ b/provisioners/ansible/playbook.yml
@@ -25,6 +25,7 @@
     - { role: 'kubernetes/kubeps1', tags: 'kubeps1' }
     - { role: 'kubernetes/kubecolor', tags: 'kubecolor' }
     - { role: 'kubernetes/kubeshark', tags: 'kubeshark' }
+    - { role: 'kubernetes/kubetail', tags: 'kubetail' }
     - { role: 'hashicorp/vagrant', tags: 'vagrant' }
     - { role: 'hashicorp/terraform', tags: 'terraform' }
     - { role: 'hashicorp/vault', tags: 'hvault' }
