Update provision.yml for github actions
add virtualbox and vagrant as prerequisites

--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -20,6 +20,11 @@ jobs:
       - name: "Checkout source code"
         uses: "actions/checkout@v3.3.0"
 
+      - name: "Install prerequisites"
+        run: |
+          brew install --cask virtualbox
+          brew install --cask vagrant
+
       - name: "Cache Vagrant boxes"
         uses: "actions/cache@v3.2.3"
         with:
