--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,7 +62,7 @@ repos:
             entry: ansible-lint
             description: Linter for Ansible roles and playbooks
             language: system
-            args: ['--force-color', '--parseable-severity', 'provisioners/ansible/playbook.yml']
+            args: ['--force-color', '--parseable', 'provisioners/ansible/playbook.yml']
             pass_filenames: false
 
           - id: rubocoplint
