--- a/vagrant.yaml
+++ b/vagrant.yaml
@@ -188,22 +188,24 @@
                     - "resize_disk"
                     - "gitconfig"
                     - "bash_aliases"
-                    - "fzf"
                     - "bash_profile"
+                    - "fzf"
                     - "vim"
-                    - "ruby"
                     - "docker"
                     - "kubectl"
                     - "kubectx"
                     - "kubefwd"
                     - "kubetail"
+                    - "kubecolor"
+                    - "kubeshark"
+                    - "kubeshell"
+                    - "kubeps1"
                     - "helm"
                     - "helm_dash"
                     - "kind"
                     - "k9s"
-                    - "kubecolor"
+                    - "ruby"
                     - "groovy"
                     - "vagrant"
                     - "hadolint"
-                    - "kubeshark"
                 :skip_tags: []
