--- a/provisioners/ansible/roles/kubernetes/kubeshell/defaults/main.yml
+++ b/provisioners/ansible/roles/kubernetes/kubeshell/defaults/main.yml
@@ -1,5 +1,9 @@
 ---
-kubeshell_package_name: 'kube-shell'
-kubeshell_package_version: '0.0.23'
-kubeshell_package_extra_args: '--user'
+kubeshell_dependencies:
+  - name: 'pyopenssl'
+    version: '23.2.0'
+  - name: 'cryptography'
+    version: '41.0.2'
+  - name: 'kube-shell'
+    version: '0.0.23'
 ...
