--- a/provisioners/ansible/roles/system/bash/profile/tasks/main.yml
+++ b/provisioners/ansible/roles/system/bash/profile/tasks/main.yml
@@ -148,4 +148,14 @@
       if [ -f /etc/profile.d/kube-ps1.sh ]; then
         export PS1="\$(kube_ps1)$PS1"
       fi
+
+- name: 'Set global PATH to include allure binary'
+  blockinfile:
+    path: '{{ bash_profile_path }}'
+    marker: '# {mark} ANSIBLE MANAGED BLOCK PATH /usr/local/allure/bin/allure'
+    state: 'present'
+    block: |
+      if [ -d "/usr/local/allure/bin" ]; then
+        PATH="/usr/local/allure/bin:$PATH"
+      fi
 ...
