--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -40,9 +40,9 @@ jobs:
       - name: 'Update vagrant.yaml ansible tags with all the existing in playbook'
         run: |
           tags=$(yq ".[].roles[].tags" provisioners/ansible/playbook.yml)
-          tags=$("'${tags//[[:space:]]/"','"}'")
+          tags="'${tags//[[:space:]]/"','"}'"
           tags="[${tags}]"
-          yq '.":host".":provisioners".":ansible".":options".":tags" = env(tags)' vagrant.yaml
+          yq '.":host".":provisioners".":ansible".":options".":tags" = env(tags)' -i vagrant.yaml
 
       - name: "Installation of Vagrant plugins"
         run: |
