--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -20,11 +20,11 @@ jobs:
       - name: "Checkout source code"
         uses: "actions/checkout@v3.3.0"
 
-      - name: "Cache Vagrant boxes"
-        uses: "actions/cache@v3.2.3"
+      - name: 'Cache Vagrant boxes'
+        uses: 'actions/cache@v3'
         with:
-          path: ~/.vagrant.d/boxes
-          key: ${{ runner.os }}-vagrant-${{ hashFiles('Vagrantfile') }}
+          path: '~/.vagrant.d/boxes'
+          key: ${{ runner.os }}-vagrant-${{ hashFiles('vagrant.yaml') }}
           restore-keys: |
             ${{ runner.os }}-vagrant-
 
@@ -37,12 +37,13 @@ jobs:
         with:
           yq-version: 'v4.28.1'
 
-      - name: 'Update vagrant.yaml with all existing provisioner tags'
+      - name: 'Update vagrant.yaml'
         run: |
           TAGS=$(yq ".[].roles[].tags" provisioners/ansible/playbook.yml)
           TAGS="'${TAGS//[[:space:]]/"','"}'"
           export TAGS="[${TAGS}]"
           yq '.":host".":provisioners".":ansible".":options".":tags" = env(TAGS)' -i vagrant.yaml
+          yq '.":host".":cpus" = 1, .":host".":memory" = 1024' -i vagrant.yaml
 
       - name: "Installation of Vagrant plugins"
         run: |
@@ -55,3 +56,4 @@ jobs:
       - name: "Destroy Vagrant (sandbox)"
         run: |
           vagrant destroy -f
+        if: '${{ success() || failure() }}'
