--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   sandbox_provisioning:
-    runs-on: macos-12
+    runs-on: macos-latest
     steps:
       - name: "Checkout source code"
         uses: "actions/checkout@v3.3.0"
@@ -43,7 +43,7 @@ jobs:
           TAGS="'${TAGS//[[:space:]]/"','"}'"
           export TAGS="[${TAGS}]"
           yq '.":host".":provisioners".":ansible".":options".":tags" = env(TAGS)' -i vagrant.yaml
-          yq '.":host".":cpus" = 1, .":host".":memory" = 1024' -i vagrant.yaml
+          yq '.":host".":cpus" = 2, .":host".":memory" = 2048' -i vagrant.yaml
 
       - name: "Installation of Vagrant plugins"
         run: |
