--- a/provisioners/ansible/roles/docker/defaults/main.yml
+++ b/provisioners/ansible/roles/docker/defaults/main.yml
@@ -22,6 +22,7 @@ docker_sdk_version: '6.0.1'
 docker_sdk_container_name: 'hello-world'
 docker_sdk_container_image: '{{ docker_sdk_container_name }}:latest'
 docker_compose_install: true
+docker_compose_pyyaml_version: '5.4.1'
 docker_compose_version: '1.29.2'
 docker_buildx_install: true
 docker_buildx_version: '0.10.4'
